[gd_scene load_steps=11 format=3 uid="uid://dg7llf6vs235i"]

[ext_resource type="Theme" uid="uid://dpkauy46cuvyr" path="res://ui/styles/normalise.tres" id="1_rk3nw"]
[ext_resource type="Script" uid="uid://bmjec57s0yqwa" path="res://logic/main_game.gd" id="2_08egc"]
[ext_resource type="Resource" uid="uid://bilvmtcnctrhi" path="res://data/globals.tres" id="3_nqenu"]
[ext_resource type="Script" uid="uid://xbe48ivdb2y7" path="res://logic/sfx.gd" id="4_2cwpn"]
[ext_resource type="PackedScene" uid="uid://ddib1b3iuu0eb" path="res://ui/component_template.tscn" id="5_dab28"]
[ext_resource type="PackedScene" uid="uid://bvku1wd63j6b4" path="res://ui/rig_slot_template.tscn" id="6_3jl5s"]
[ext_resource type="Theme" uid="uid://77xkaw1qrmgr" path="res://ui/styles/terminal.tres" id="7_00dd2"]
[ext_resource type="Theme" uid="uid://b0oj1gnil5il1" path="res://ui/styles/button_red.tres" id="8_04351"]
[ext_resource type="Theme" uid="uid://0gapxyphftb4" path="res://ui/styles/button_progress.tres" id="9_m3h2p"]
[ext_resource type="PackedScene" uid="uid://b88aals4u6nuf" path="res://ui/announcement_box.tscn" id="10_08egc"]

[node name="MainGame" type="Control" node_paths=PackedStringArray("comp_list_display", "comp_template", "rig_slots_list_display", "rig_slots_template", "announcement_box")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_rk3nw")
script = ExtResource("2_08egc")
globals = ExtResource("3_nqenu")
comp_list_display = NodePath("VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll/ComponentList")
comp_template = NodePath("VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll/ComponentList/ComponentTemplate")
rig_slots_list_display = NodePath("VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll/RigList")
rig_slots_template = NodePath("VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll/RigList/RigSlotTemplate")
announcement_box = NodePath("AnnouncementBox")

[node name="SFX" type="Node" parent="."]
script = ExtResource("4_2cwpn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPart" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftSideMargin" type="MarginContainer" parent="VBoxContainer/TopPart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftSide" type="HBoxContainer" parent="VBoxContainer/TopPart/LeftSideMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxCL" type="VBoxContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Orders[/b]"
fit_content = true

[node name="CLScroll" type="ScrollContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL"]
layout_mode = 2
size_flags_vertical = 3

[node name="ComponentList" type="VBoxContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ComponentTemplate" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll/ComponentList" instance=ExtResource("5_dab28")]
visible = false
layout_mode = 2

[node name="VBoxRig" type="VBoxContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Station Rig[/b]"
fit_content = true

[node name="RigScroll" type="ScrollContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig"]
layout_mode = 2
size_flags_vertical = 3

[node name="RigList" type="VBoxContainer" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RigSlotTemplate" parent="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll/RigList" instance=ExtResource("6_3jl5s")]
visible = false
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopPart"]
layout_mode = 2

[node name="RightSideMargin" type="MarginContainer" parent="VBoxContainer/TopPart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightSide" type="VBoxContainer" parent="VBoxContainer/TopPart/RightSideMargin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/TopPart/RightSideMargin/RightSide"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 1
tabs_position = 1

[node name="Terminal" type="TabBar" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Terminal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TerminalText" type="RichTextLabel" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Terminal/MarginContainer"]
layout_mode = 2
theme = ExtResource("7_00dd2")
bbcode_enabled = true
text = "[b]>[/b] ls
Documents   Music   Pictures
Videos      Files   Placeholder"

[node name="Details" type="TabBar" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Details"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailsText" type="RichTextLabel" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Details/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
bbcode_enabled = true

[node name="Manual" type="TabBar" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Manual"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManualText" type="RichTextLabel" parent="VBoxContainer/TopPart/RightSideMargin/RightSide/TabContainer/Manual/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
bbcode_enabled = true
text = "[font_size=20][b]PolAstra Delta-7 Operations Manual[/b][/font_size]
[font_size=16]Section 4B: Drill Head Material Compliance[/font_size]

[p]Officer Nowak,[/p]
[p]The structural integrity of asteroid drill heads is paramount for maintaining uninterrupted resource extraction and ensuring the safety of rig systems. Given the diverse manufacturing origins across the [color=blue]New World[/color], [color=red]Old World[/color], and [color=green]European Bloc[/color], strict adherence to material specifications is mandatory. Your role in verifying incoming component manifests against approved standards cannot be overstated.[/p]

[b]Rig Baseline Standard: PN-H-85020 (Polish Standard)[/b]
[p]Delta-7's drilling assemblies, torque converters, and stress dampeners are calibrated based on the performance characteristics of steel meeting the [b]PN-H-85020[/b] specification. This standard provides the optimal balance of hardness, tensile strength, and resistance to fracture propagation under the unique stresses encountered during deep-core asteroid fragmentation.[/p]
[p]Drill heads certified as [b]PN-H-85020[/b] are the designated standard and are [b][color=green]APPROVED[/b][/color] for integration without reservation.[/p]

[b]Acceptable Alternate Grades:[/b]
[p]The following grades have passed preliminary stress analysis and may be considered for integration, though their long-term performance profiles differ:[/p]
[ul]
[*] [color=blue]ASTM A516 Grade 70 (New World - High Grade):[/color] A superior alloy demonstrating enhanced durability and often exceeding the lifespan of the baseline standard. If available and within logistical parameters, these are [b][color=green]APPROVED[/b][/color] and recommended.
[*] [color=blue]ASTM A36 (New World - Standard):[/color] Possesses adequate raw strength but exhibits slightly lower wear resistance under sustained high-torque operations. Expect potentially shorter operational cycles before replacement or maintenance is required compared to PN-H-85020. Use necessitates closer monitoring via system telemetry. [b][color=yellow]Conditionally Approved[/color][/b] - Monitor wear indicators.
[*] [color=red]GOST 1050-88 (Old World - Standard):[/color] Meets baseline strength in simulations, but field reports indicate a tendency towards increased operational vibration and slightly accelerated fatigue under fluctuating density conditions. Performance deemed adequate, but less efficient than baseline. [b][color=yellow]Conditionally Approved[/color][/b] - May impact overall efficiency.
[/ul]

[b][color=red]Non-Compliant / Unacceptable Grades:[/color][/b]
[p]Integration of components utilizing the following steel grades is [b]strictly prohibited[/b]. These materials present an unacceptable risk of premature failure and potential damage to interconnected systems.[/p]
[ul]
[*] [color=red]GOST 15X (Old World - Low Grade):[/color] Demonstrates insufficient shear strength and becomes excessively brittle under the thermal cycling inherent in drilling operations. High probability of catastrophic head shattering during standard use. [b][color=red]REJECT IMMEDIATELY.[/color][/b]
[*] [i]Any other unlisted or unverified steel grade designation:[/i] Treat as non-compliant by default. Such components must be quarantined pending explicit engineering review and directive Gamma-7 clearance. [b][color=orange]QUARANTINE & REPORT.[/color][/b]
[/ul]

[b]Risks of Material Non-Compliance:[/b]
[p]Be advised that the consequences of integrating substandard drill heads may [i]not[/i] be immediate. Latent failures are common and can manifest as:[/p]
[ul]
[*] [b]Delayed Fracture:[/b] Internal stresses accumulate over multiple operational cycles, potentially leading to sudden, catastrophic head failure without prior warning signs in basic telemetry.
[*] [b]Reduced Efficiency:[/b] Suboptimal material hardness or design compromises stemming from inferior steel can lead to significantly slower drilling progress, jeopardizing quota targets.
[*] [b]Increased System Strain:[/b] Higher vibration or faster degradation places additional stress on gearboxes, power conduits, and mounting assemblies, shortening their operational lifespan.
[/ul]
[p][color=yellow]A drill head functioning now could still be a failure waiting to happen if its material composition is incorrect. Verify meticulously.[/color][/p]

[p]Your adherence to these material compliance protocols is essential for the continued success and safety of PolAstra Delta-7 operations.[/p]
[hr]
[i]-- Document Revision 2.7, PolAstra Central Compliance Office[/i]"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BottomPart" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftSideMargin" type="MarginContainer" parent="VBoxContainer/BottomPart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsGrid" type="GridContainer" parent="VBoxContainer/BottomPart/LeftSideMargin"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="RejectButton" type="Button" parent="VBoxContainer/BottomPart/LeftSideMargin/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reject"

[node name="AcceptButton" type="Button" parent="VBoxContainer/BottomPart/LeftSideMargin/ButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="RightSideMargin" type="MarginContainer" parent="VBoxContainer/BottomPart"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightSide" type="VBoxContainer" parent="VBoxContainer/BottomPart/RightSideMargin"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/BottomPart/RightSideMargin/RightSide"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Type here..."
caret_blink = true

[node name="CoffeeButton" type="Button" parent="VBoxContainer/BottomPart/RightSideMargin/RightSide"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_04351")
text = "Take coffee break"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/BottomPart/RightSideMargin/RightSide/CoffeeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("9_m3h2p")
max_value = 1.0
show_percentage = false

[node name="MenuButton" type="MenuButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_right = -32.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Menu"
flat = false
item_count = 2
popup/item_0/text = "Take coffee break"
popup/item_0/id = 0
popup/item_1/text = "Exit game"
popup/item_1/id = 1

[node name="AnnouncementBox" parent="." instance=ExtResource("10_08egc")]
layout_mode = 1
offset_left = 314.0
offset_top = 16.0
offset_right = -314.0
offset_bottom = 78.0

[connection signal="action_denied" from="." to="SFX" method="_on_main_game_action_denied"]
[connection signal="module_loaded" from="." to="SFX" method="_on_main_game_module_loaded"]
[connection signal="component_selected" from="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll/ComponentList/ComponentTemplate" to="." method="_on_component_template_component_selected"]
[connection signal="component_selected" from="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxCL/CLScroll/ComponentList/ComponentTemplate" to="SFX" method="_on_component_template_component_selected"]
[connection signal="component_selected" from="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll/RigList/RigSlotTemplate" to="." method="_on_rig_slot_template_component_selected"]
[connection signal="component_selected" from="VBoxContainer/TopPart/LeftSideMargin/LeftSide/VBoxRig/RigScroll/RigList/RigSlotTemplate" to="SFX" method="_on_rig_slot_template_component_selected"]
[connection signal="pressed" from="VBoxContainer/BottomPart/LeftSideMargin/ButtonsGrid/AcceptButton" to="." method="_on_accept_button_pressed"]
